<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/Home"/>
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/Search"/>
    <item
        android:id="@+id/nave_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_nav_favorite"
        android:title="@string/Favorite"/>
    <item
        android:id="@+id/nav_person"
        android:enabled="true"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/Profile"/>
    <item
        
        android:id="@+id/nav_chat"
        android:enabled="true"
        android:icon="@drawable/ic_nav_chat"

        android:title="@string/Chat"/>

</menu>