<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shapetext_cardview"
    tools:context=".ui.auth.ForgetPasswordActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="120sp"/>

        <EditText

            android:id="@+id/edt_email_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:background="@drawable/shapetext"
            android:padding="15sp"
            android:layout_marginTop="10sp"/>

        <Button
            android:id="@+id/btn_restor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restor_your_password"
            android:textSize="20sp"
            android:textAllCaps="false"
           android:layout_margin="70dp"
            android:background="@drawable/shapebutton"
            />





</LinearLayout>